@@ -73,6 +73,6 @@ DIST netbeans-websvc-6.0.tar.bz2 21262337 RMD160 aa0eea92a59cad8c5907c9a5be41a1a
 DIST netbeans-xml-6.0.tar.bz2 4404173 RMD160 6360765b44e988fb1ad4e529630ac1abbc4dae9d SHA1 92f489b03154a8153f8508387886afb9fbfa1959 SHA256 5d63287da3cfc42cbfb24ab619d1e96ff625124e1225c5377aa5d8c22deaecd9
 EBUILD netbeans-6.0.ebuild 32690 RMD160 53bf60c90e06f5fbb4b08a2363e750abf0a1b563 SHA1 9725266d8090a628691fa55fa179d5f8c72a3799 SHA256 a663b402ecd295ed316307b1be3772781e9f87c4013f6b1670a1ce1ca99d7669
 EBUILD netbeans-6.1-r1.ebuild 16545 RMD160 ae5471ae840869fbc962fceb48f8ee811efae729 SHA1 d4782ff9271907bbb98e64029be47bfce3d8677a SHA256 b5ffe94c7e7f66a7981c076c54fdc847a5773f4cf890c789935fbaee07299c2e
-EBUILD netbeans-6.5_beta.ebuild 17582 RMD160 cf511732c41ea087576e10f1f7eb18ca8838b8e7 SHA1 24eb5354e7f342f1291a5d2307855c48f8ba5bb2 SHA256 71a0b0c538ce91161d809e677db32a737c607a205830ac32acbd3ce848eb9950
-MISC ChangeLog 23638 RMD160 8e279217122d43a92d9e1209eaf2534b8a0669a5 SHA1 2d844cbdfe331275cf3485cb957eeb3312954eae SHA256 c3abeb7b2ef380119308d5b134d1a0ced1f50a3f5a3b5e1c986e548016615186
+EBUILD netbeans-6.5_beta.ebuild 18191 RMD160 f1bcabe0305dc7343d4bef6d73583b92c8ae2679 SHA1 588348212f0a6493834843bbf0e770a0280f8c32 SHA256 1549941aebfd40e99bf635b85ac082abdb821beeafcb02f86a832475cd80e164
+MISC ChangeLog 23769 RMD160 f21718c20abebc03861612f8a6a475418b235edd SHA1 1025f634227309f681e2e31ccb90d5570256e23f SHA256 19dc49bd43970855b5886c8063c80872190194927255f78bc0f8d925d32fb7a3
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
